updated create author including file upload

--- a/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
@@ -15,7 +15,7 @@
                 <h1 class="card-title">Create New Author</h1>
             </div>
             <div class="card-body p-0">
-                <form asp-action="Create" class="createclass" method="post">
+                <form asp-action="Create" class="createclass" method="post" enctype="multipart/form-data">
                     @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> *@
                     <div class="form-group col-md-8 authform">
                         <label asp-for="FirstName" class="control-label">Author First Name</label>
@@ -52,6 +52,11 @@
                     <div class="form-group col-md-8 authform">
                         <label asp-for="AboutAuth" class="control-label">About Author</label>
                         <input asp-for="AboutAuth" class="form-control" />
+                    </div>
+                    <div class="form-group col-md-8 authform">
+                        <label class="control-label">Author Image</label>
+                        <input type="file" name="authorImage" class="form-control" required />
+                        <span asp-validation-for="AuthorImage" class="text-danger"></span>
                     </div>
                     <div class="form-group text-center">
                         <button class="btn btn-warning">
