--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -252,6 +252,14 @@
             </ul>
             <ul class="nav nav-treeview">
               <li class="nav-item">
+                <a asp-area="admin" asp-controller="author" asp-action="create" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Create Author</p>
+                </a>
+              </li>
+            </ul>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
                 <a href="pages/layout/top-nav.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Create Role</p>
