--- a/My Blog Website/wwwroot/css/style_1.css
+++ b/My Blog Website/wwwroot/css/style_1.css
@@ -1393,3 +1393,101 @@ a, a:hover
 .gap-2 {
     gap: 0.5rem;
 }
+
+/*QnA*/
+
+.accordionDD .accordionDD-item {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.accordionDD .accordionDD-item button[aria-expanded='true'] {
+  border-bottom: 1px solid #03b5d2;
+}
+
+.accordionDD button {
+  position: relative;
+  display: block;
+  text-align: left;
+  width: 100%;
+  padding: 1em 0;
+  color: #7288a2;
+  font-size: 1.15rem;
+  font-weight: 400;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.accordionDD button:hover,
+.accordionDD button:focus {
+  cursor: pointer;
+  color: #03b5d2;
+}
+
+.accordionDD button:hover::after,
+.accordionDD button:focus::after {
+  cursor: pointer;
+  color: #03b5d2;
+  border: 1px solid #03b5d2;
+}
+
+.accordionDD button .accordionDD-title {
+  padding: 1em 1.5em 1em 0;
+}
+
+.accordionDD button .icon {
+  display: inline-block;
+  position: absolute;
+  top: 18px;
+  right: 0;
+  width: 22px;
+  height: 22px;
+  border: 1px solid;
+  border-radius: 22px;
+}
+
+.accordionDD button .icon::before {
+  display: block;
+  position: absolute;
+  content: '';
+  top: 9px;
+  left: 5px;
+  width: 10px;
+  height: 2px;
+  background: currentColor;
+}
+.accordionDD button .icon::after {
+  display: block;
+  position: absolute;
+  content: '';
+  top: 5px;
+  left: 9px;
+  width: 2px;
+  height: 10px;
+  background: currentColor;
+}
+
+.accordionDD button[aria-expanded='true'] {
+  color: #03b5d2;
+}
+.accordionDD button[aria-expanded='true'] .icon::after {
+  width: 0;
+}
+.accordionDD button[aria-expanded='true'] + .accordionDD-content {
+  opacity: 1;
+  max-height: 9em;
+  transition: all 200ms linear;
+  will-change: opacity, max-height;
+}
+.accordionDD .accordionDD-content {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: opacity 200ms linear, max-height 200ms linear;
+  will-change: opacity, max-height;
+}
+.accordionDD .accordionDD-content p {
+  font-size: 1rem;
+  font-weight: 300;
+  margin: 2em 0;
+}
